# autotalk.core

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AutoTalk.sln  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  autotalk.vcxproj  autotalk.vcxproj.filters  build.sh  build_autotalk_gpu.sh  build_cuda_simple.sh  build_cuda_test.sh  build_gpu.sh  build_linux.sh  build_macos.sh  cmake_install.cmake  cuda_test_build.sh  debug_autotalk.bat  debug_results.txt  download_model.sh  model_test.vcxproj  model_test.vcxproj.filters  run_autotalk.bat  test.sh  test_autotalk.bat
.github/workflows/: build.yml  cmake_build.yml  docker_build.yml  release.yml
client/: autotalk_app.py  index.html  package.json  pure-tcp.js  requirements.txt  tsconfig.json  tsconfig.node.json  vite.config.ts
client/electron/: main.js  preload.js
client/src/: App.vue  main.ts
client/src/assets/: style.css
cmake/: FindPortAudio.cmake
cuda_simple_test/: CMakeLists.txt  simple_cuda_test.cu
docker/: README.md  download_models.sh
docker/linux/: Dockerfile
docker/macos/: Dockerfile  build_mac_metal.sh
docker/windows/: Dockerfile
include/: audio_capture.h  audio_server.h  system_monitor.h  voiceprint_recognition.h  websocket_client.h  websocket_server.h
lib/portaudio/: CMakeLists.txt
linux_arm/: CMakeLists.txt  vec.h
nvapi/: CMakeLists.txt  nvapi.cpp  nvapi.h
nvapi/amd64/: nvapi64.lib
scripts/: download_model.sh
src/: CMakeLists.txt  CMakeLists_cuda_test.txt  audio_capture.cpp  audio_capture.h  audio_recorder.cpp  audio_recorder.h  audio_server.cpp  build_cuda_test.sh  cuda_test.cpp  main.cpp  main_new.cpp  main_simple.cpp  model_test.cpp  simple_cuda_test.cu  system_monitor.cpp  voiceprint_recognition.cpp  websocket_client.cpp  websocket_server.cpp
whisper.cpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  whisper-config.cmake  whisper.cpp.sln  whisper.pc
whisper.cpp/ggml/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  ggml-config.cmake  ggml.sln
whisper.cpp/ggml/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  ggml-base.vcxproj  ggml-base.vcxproj.filters  ggml-cpu.vcxproj  ggml-cpu.vcxproj.filters  ggml.vcxproj  ggml.vcxproj.filters
whisper.cpp/ggml/src/ggml-cpu/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
whisper.cpp/ggml/src/ggml-cuda/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  ggml-cuda.vcxproj  ggml-cuda.vcxproj.filters
whisper.cpp/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  whisper.vcxproj  whisper.vcxproj.filters
whisper.cpp/src/whisper.dir/MinSizeRel/: objects.txt
whisper.cpp/src/whisper.dir/RelWithDebInfo/: objects.txt
